--- a/esquema-css-dk/css/styles.css
+++ b/esquema-css-dk/css/styles.css
@@ -5,7 +5,9 @@
     --medium-blue: #5483B3;
     --light-blue: #7DA0CA;
     --white-blue: #C1E8FF;
+    --white: #eaeef3;
     --main-font: "Afacad Flux", serif;
+    --title-font: "Lily Script One", serif;
 }
 /*Easter egg*/
 body#pag-avanzado #easter-egg{
@@ -26,19 +28,111 @@ body#pag-avanzado #easter-egg{
         width: 90px;
     }
 }
-/*Mobile*/
+
+/*>576px*/
 body{
     font-family: var(--main-font);
     margin: 0;
     padding: 0;
+    background-color: var(--white-blue);
+}
+h1{
+    font-family: var(--title-font);
+}
+a, a:visited, a:link{
+    color: var(--black-blue);
+    font-weight: 600;
+    text-decoration: none;
+}
+a:hover, a:focus, a:active{
+    text-decoration: underline;
+    cursor: pointer;
+}
+details summary:hover{
+    cursor: pointer;
+}
+figure{
+    margin: 2px auto;
+    width: 100%;
+}
+img{
+    width: 100%;
+    border-radius: 5px;
+}
+figcaption{
+    text-align: center;
 }
 header{
     position: sticky;
     top: 0;
-    background-color: white;
+    background-color: var(--dark-blue);
+    color:var(--white);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5%;
+}
+header nav ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header nav ul li a,
+header nav ul li a:link,
+header nav ul li a:visited,
+footer ul li a,
+footer ul li a:link,
+footer ul li a:visited
+{
+    padding: 0 3px;
+    color: var(--white);
 }
 main{
-    background-color: var(--white-blue);
     color: var(--black-blue);
-    
+    padding: 1.5%;
+}
+table{
+    border: 1px var(--medium-blue) dashed;
+    width: 100%;
+    margin: 3px 0;
+}
+table tbody tr:nth-child(even){
+    background-color: var(--light-blue);
+}
+footer{
+    color: var(--white);
+    background-color: var(--dark-blue);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5%;
+}
+footer div{
+    display: flex;
+    flex-direction: column;
+}
+
+/*>=1200px*/
+/*Bajar img, subir fuentes y ver qué hago con el título*/
+@media all and (min-width: 1200px){
+    figure{
+        width: 75%;
+    }
+
+    figcaption{
+        font-size: 1rem;
+    }
+    a, p, span, summary, p>strong, li>strong, p>em, li, td, th{
+        font-size: 1.125rem;
+    }
+    h2{
+        font-size: 1.5rem;
+    }
+    h3{
+        font-size: 1.375rem;
+    }
+    h4{
+        font-size: 1.25rem;
+    }
 }
